package exceptions;

public class DoorLockedException extends Exception {
    public DoorLockedException(String message) {
        super(message);
    }
}